# infiquetra-claude-plugins

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: publish-plugin.yml  test.yml  validate-plugins.yml
docs/: MARKETPLACE_GUIDE.md  PLUGIN_SPEC.md
marketplace/validator/: schema.json  validate.py
plugins/docs-generator/: CHANGELOG.md  README.md
plugins/docs-generator/.claude-plugin/: plugin.json
plugins/docs-generator/src/: docs_generator.py
plugins/identity-toolkit/: CHANGELOG.md  README.md
plugins/identity-toolkit/.claude-plugin/: plugin.json
plugins/identity-toolkit/agents/: digital-identity-architect.md
plugins/marketplace-lister/: CHANGELOG.md  README.md
plugins/marketplace-lister/.claude-plugin/: plugin.json
plugins/marketplace-lister/agents/: marketplace-lister.md
plugins/marketplace-lister/commands/: marketplace.md
plugins/pagerduty/: CHANGELOG.md  README.md
plugins/pagerduty/.claude-plugin/: plugin.json
plugins/parallel-test-runner/: CHANGELOG.md  README.md
plugins/python-toolkit/: CHANGELOG.md  README.md
plugins/sdk-lifecycle/: CHANGELOG.md  README.md
plugins/slack/: CHANGELOG.md  README.md
plugins/splunk/: CHANGELOG.md  README.md
plugins/test-suite/: CHANGELOG.md  README.md
plugins/todoist-manager/: CHANGELOG.md  README.md
scripts/: validate_plugins.py
tests/: conftest.py  test_marketplace_client.py  test_pagerduty_client.py  test_slack_client.py  test_splunk_client.py  test_test_runner.py  test_todoist_client.py
tools/: create-plugin.sh
(+77 files in other folders)
